# g-crm

./: API_SPECIFICATION.md  CHANGELOG.md  CLAUDE.md  DATABASE_DESIGN.md  IMPLEMENTATION_REPORT.md  MASTER_AUDIT_REPORT.md  MASTER_DEVELOPMENT_ROADMAP.md  PHASE17_COMPLETION_REPORT.md  PRODUCTION_READINESS_REPORT.md  PROJECT_ANALYSIS.md  PROJECT_AUDIT.md  QUOTES_DESIGN.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  STONE_WORKFLOW_REPORT.md  UI_UX_GUIDELINES.md  WORLD_CLASS_PLAN.md
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/core/: config.py
backend/core/api/: errors.py  middleware.py  pagination.py
backend/core/audit/: models.py  router.py  schemas.py  service.py
backend/core/auth/: mfa.py  models.py  router.py  schemas.py  security.py  service.py  token_denylist.py
backend/core/bootstrap/: app_factory.py
backend/core/companies/: models.py  router.py  schemas.py
backend/core/db/: base.py  mixins.py  session.py
backend/core/esignature/: registry.py
backend/core/events/: event_bus.py  event_envelope.py  models.py  repository.py  router.py
backend/core/module_registry/: contracts.py  registry.py
backend/core/rbac/: dependencies.py  permissions.py  rate_limit.py
backend/migrations/: env.py  script.py.mako
backend/scripts/: seed.py
backend/tests/: conftest.py  test_core_boots_standalone.py  test_core_independence.py  test_database_schema.py  test_event_bus.py  test_phase18_security_hardening.py  test_rbac_permissions.py  test_refresh_token_revocation.py  test_security_hardening.py
(+816 files in other folders)
